welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: value update is not a member of String
if (litMessage() = R) {
    ^BDRBuggle:2: error: not found: value R
if (litMessage() = R) {
                   ^BDRBuggle:5: error: reassignment to val
} else if (litMessage = L) {
                      ^BDRBuggle:8: error: reassignment to val
} else if (litMessage = I) {
                      ^BDRBuggle:12: error: reassignment to val
} else if (litMessage = A) {
                      ^BDRBuggle:14: error: reassignment to val
} else if (litMessage = B) {
                      ^BDRBuggle:17: error: reassignment to val
} else if (litMessage = C) {
                      ^BDRBuggle:21: error: reassignment to val
} else if (litMessage = Z) {
                      ^BDRBuggle:23: error: reassignment to val
} else if (litMessage = Y) {
                      ^BDRBuggle:26: error: reassignment to val
} else if (litMessage = X) {
                      ^